--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/claczny/VizBin/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/claczny/VizBin/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <!-- a href="https://github.com/claczny/VizBin/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <!-- a href="https://github.com/claczny/VizBin/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/claczny/VizBin" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
