Added scaled logo and used them in index.html.wq

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         <p>Many people have collaborated on making this application become a reality: Cedric C. Laczny, Tomasz Sternal, Valentin Plugaru, Piotr Gawron, Arash Atashpendar, Hera Houry Margossian, Sergio Coronado, Laurens van der Maaten, Nikos Vlassis, and Paul Wilmes.</p>
         <p>The present work was supported by an ATTRACT programme grant (A09/03) and a European Union Joint Programming in Neurodegenerative Diseases grant (INTER/JPND/12/01) to Paul Wilmes and an Aide &agrave; la Formation Recherche grant (AFR PHD/4964712) to Cedric C. Laczny all funded by the Luxembourg National Research Fund (FNR).</p>
 
+        <div>
+        <img src="fnr.gif" alt="img:Fonds National de la Recherche">
+        <img src="LCSB_short_large_RGB_scaled.jpg" alt="Luxembourg Centre for Systems Biomedicine">
+        </div>
+
 
         <footer>
           Vizbin is maintained by <a href="https://github.com/claczny">claczny</a><br>
