Worked on affiliation logos.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     .default-spacer{
             margin-right:10px;
     }
+    .large-spacer{
+            margin-right:100px;
+    }
     </style>
     <title>VizBin - Fast and easy human-augmented binning</title>
   </head>
@@ -77,8 +80,9 @@
         <p>The present work was supported by an ATTRACT programme grant (A09/03) and a European Union Joint Programming in Neurodegenerative Diseases grant (INTER/JPND/12/01) to Paul Wilmes and an Aide &agrave; la Formation Recherche grant (AFR PHD/4964712) to Cedric C. Laczny all funded by the Luxembourg National Research Fund (FNR).</p>
 
         <div>
-        <img src="fnr.gif" alt="img:Fonds National de la Recherche">
-        <img src="LCSB_short_large_RGB_scaled.jpg" alt="Luxembourg Centre for Systems Biomedicine">
+        <img class="large-spacer" src="images/Logo_Uni_quadri_88px.jpg" alt="University of Luxembourg">
+        <img class="large-spacer" src="images/fnr.gif" alt="Fonds National de la Recherche">
+        <img src="images/LCSB_short_large_RGB_88px.jpg" alt="Luxembourg Centre for Systems Biomedicine">
         </div>
 
 
