--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <h3>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage.</h3>
-<p>VizBin is designed with the user in mind. Hence, all that is needed is a fasta file containing the sequences of interest. A step-by-step guide on using VizBin - including a description of loading the data, selecting points, and exporting the sequences represented by the selected points - is provided on the <a href="https://github.com/claczny/VizBin/wiki/Tutorial">tutorial page</a> of VizBin's github wiki.</p>
+<p>VizBin is designed with the user in mind. Hence, we kept the default user-interface simple. No fiddling with parameters. All that is needed is a fasta file containing the sequences of interest. A step-by-step guide on using VizBin - including a description of loading the data, selecting points, and exporting the sequences represented by the selected points - is provided on the <a href="https://github.com/claczny/VizBin/wiki/Tutorial">tutorial page</a> of VizBin's github wiki.</p>
 <p>We suggest to visualize fragments that are at least 1,000nt long. Visualizing shorter fragments is also possible but may lead to blurring of distinct clusters, hence the suggested threshold. Filtering sequences based on their length can be done directly from within VizBin, as we explain in the <a href="">tutorial including filtering</a>. Thus, no prior separate filtering step is required.</p>
 
           <h3>
