--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="inner">
 
         <header>
-          <h1>Vizbin</h1>
+          <h1>VizBin</h1>
           <h2>The fast and easy-to-use application for human-augmented binning</h2>
         </header>
 
