--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="https://github.com/claczny/VizBin/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/claczny/VizBin/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           --->
-          <a href="https://github.com/claczny/VizBin/blob/master/VizBin-dist.jar?raw=true" id="download-jar" class="button"><span>Download the app</span></a>
+          <a href="https://github.com/claczny/VizBin/blob/master/VizBin-dist.jar?raw=true" id="download-jar" class="button"><span>Download app</span></a>
           <a href="https://github.com/claczny/VizBin" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
