Initial test on adding example data.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           
         <h3>
 <a name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
-<p>The application note manuscript is currently in preparation. Once it is published, we will include the reference here.</p>
+<p>The Software article manuscript is currently in revision. Once it is published, we will include the reference here.</p>
 
 <p>Below, you can see the screenshot of the visualization window. Each point represents a genomic fragment (here of length >= 1,000nt). The colors are added for visualization purposes only and each color represents an invdividual taxon of origin. The points contained in the red polygon are selected.</p>
 <img src="https://github.com/claczny/VizBin/wiki/Tutorials/pictures/13.png" alt="img:polygonal selection">
@@ -68,7 +68,11 @@
 <h4>Gist</h4>
 <p>The gist of the concept is that VizBin uses the state-of-the-art nonlinear dimension reduction algorithm <a href="http://homepage.tudelft.nl/19j49/t-SNE.html"><span>BH-SNE</span></a> and appropriate data transformation to visualize (assembled) metagenomic data-inherent clusters. 
 <h4>Speed</h4>
-<p>Due to the efficiency of BH-SNE, VizBin can be used on regular desktop computers and returns results very fast (for 30,000 datapaoints, it takes less than 4 minutes on a MacBook Pro from 2011). To achieve further speedups, we have integrated parallelization through the <a href="http://openmp.org/wp/">OpenMP API</a> thus allowing to use multiple cores which are included in most modern computers.</p>
+<p>Due to the efficiency of BH-SNE, VizBin can be used on regular desktop computers and returns results very fast (for 30,000 datapoints, it takes less than 4 minutes on a MacBook Pro from 2011). To achieve further speedups, we have integrated parallelization through the <a href="http://openmp.org/wp/">OpenMP API</a> thus allowing to use multiple cores which are included in most modern computers.</p>
+<h4>Example data</h4>
+<ul>
+    <li><a href="http://claczny.github.io/VizBin/data/37A.zip">37A</a></li>
+</ul>
 
         </section>
 
