Referenced more example data.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage.</h3>
 <p>VizBin is designed with the user in mind. Hence, we kept the default user-interface simple. No fiddling with parameters. All that is needed is a fasta file containing the sequences of interest. A step-by-step guide on using VizBin - including a description of loading the data, selecting points, and exporting the sequences represented by the selected points - is provided on the <a href="https://github.com/claczny/VizBin/wiki/Tutorial">tutorial page</a> of VizBin's github wiki.</p>
 <p>We suggest to visualize fragments that are at least 1,000nt long. Visualizing shorter fragments is also possible but may lead to blurring of distinct clusters, hence the suggested threshold. Filtering sequences based on their length can be done directly from within VizBin, as we explain in the <a href="">tutorial including filtering</a>. Thus, no prior separate filtering step is required.</p>
+<h4>Example data</h4>
+<ul>
+    <li><a href="http://claczny.github.io/VizBin/data/37A.zip">37A</a></li>
+    <li><a href="http://claczny.github.io/VizBin/data/37B.zip">37B</a></li>
+    <li><a href="http://claczny.github.io/VizBin/data/SRS013705.zip">SRS013705</a></li>
+    <li><a href="http://claczny.github.io/VizBin/data/AMFJ01.zip">AMFJ01</a></li>
+</ul>
 
           <h3>
 <a name="the-concept" class="anchor" href="#the-concept"><span class="octicon octicon-link"></span></a>The concept.</h3>
@@ -69,10 +76,6 @@
 <p>The gist of the concept is that VizBin uses the state-of-the-art nonlinear dimension reduction algorithm <a href="http://homepage.tudelft.nl/19j49/t-SNE.html"><span>BH-SNE</span></a> and appropriate data transformation to visualize (assembled) metagenomic data-inherent clusters. 
 <h4>Speed</h4>
 <p>Due to the efficiency of BH-SNE, VizBin can be used on regular desktop computers and returns results very fast (for 30,000 datapoints, it takes less than 4 minutes on a MacBook Pro from 2011). To achieve further speedups, we have integrated parallelization through the <a href="http://openmp.org/wp/">OpenMP API</a> thus allowing to use multiple cores which are included in most modern computers.</p>
-<h4>Example data</h4>
-<ul>
-    <li><a href="http://claczny.github.io/VizBin/data/37A.zip">37A</a></li>
-</ul>
 
         </section>
 
