--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           
         <h3>
 <a name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
-<p>The Software article manuscript is currently in revision. Once it is published, we will include the reference here.</p>
+<p>The Software article manuscript is currently in revision. Once it is published, we will include the reference here.  The "Download app" button always points to the most recent version of VizBin. The version of VizBin that is part of the manuscript can be downloaded from the article's website or from <a href="https://github.com/claczny/VizBin/raw/v0.9/VizBin-dist.jar">here</a>.</p>
 
 <p>Below, you can see the screenshot of the visualization window. Each point represents a genomic fragment (here of length >= 1,000nt). The colors are added for visualization purposes only and each color represents an invdividual taxon of origin. The points contained in the red polygon are selected.</p>
 <img src="https://github.com/claczny/VizBin/wiki/Tutorials/pictures/13.png" alt="img:polygonal selection">
