--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
 
         <header>
           <h1>VizBin</h1>
-          <h2>The fast and easy-to-use application for visualization and human-augmented binning of metagenomic datasets</h2>
+          <h2>The fast and easy-to-use application for the visualization and human-augmented binning of metagenomic datasets</h2>
         </header>
 
         <ul id=menu>
