--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
         <h3>
         <a name="albertsen2013" class="anchor" href="#albertsen2013"><span class="octicon octicon-link"></span></a>Albertsen 2013</h3>
         <img src="gallery/APMI01_gt_2000nt.png" alt="img:albertsen2013">
-        <li><a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a></li>
+        <a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a>
         </section>
 
 
