--- a/gallery.html
+++ b/gallery.html
@@ -60,13 +60,19 @@
         <h3>
         <a name="albertsen2013" class="anchor" href="#albertsen2013"><span class="octicon octicon-link"></span></a>Albertsen 2013</h3>
         <img src="gallery/APMI01_gt_2000nt.png" alt="img:albertsen2013">
-        <a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a>
+        <h4>Information</h4>
+        <ul>
+            <li><a href=http://www.nature.com/nbt/journal/v31/n6/full/nbt.2579.html">Original publication</a></li>
+            <li><a href=http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=APMI01.1.fsa_nt.gz">Sequences source</a></li>
+            <li>sequences >= 2,000 nt: 52,367
+            <li><a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a></li>
+        </ul>
         </section>
 
 
-        <hr>
+            <hr>
 
-        <section id="acknowledgments">
+            <section id="acknowledgments">
         <h2>Acknowledgments</h2>
         <p>Many people have collaborated on making this application become a reality: Cedric C. Laczny, Tomasz Sternal, Valentin Plugaru, Piotr Gawron, Arash Atashpendar, Hera Houry Margossian, Sergio Coronado, Laurens van der Maaten, Nikos Vlassis, and Paul Wilmes.</p>
         <p>The present work was supported by an ATTRACT programme grant (A09/03) and a European Union Joint Programming in Neurodegenerative Diseases grant (INTER/JPND/12/01) to Paul Wilmes and an Aide &agrave; la Formation Recherche grant (AFR PHD/4964712) to Cedric C. Laczny all funded by the Luxembourg National Research Fund (FNR).</p>
