--- a/gallery.html
+++ b/gallery.html
@@ -62,8 +62,8 @@
         <img src="gallery/APMI01_gt_2000nt.png" alt="img:albertsen2013">
         <h4>Information</h4>
         <ul>
-            <li><a href=http://www.nature.com/nbt/journal/v31/n6/full/nbt.2579.html">Original publication</a></li>
-            <li><a href=http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=APMI01.1.fsa_nt.gz">Sequences source</a></li>
+            <li><a href="http://www.nature.com/nbt/journal/v31/n6/full/nbt.2579.html">Original publication</a></li>
+            <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=APMI01.1.fsa_nt.gz">Sequences source</a></li>
             <li>sequences >= 2,000 nt: 52,367
             <li><a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a></li>
         </ul>
