--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul id=menu>
           <li><a href="#downloads">Downloads</a>
           <li><a href="#main_content">Main</a>
+          <li><a href="gallery.html">Gallery</a>
           <li><a href="#acknowledgments">Acknowledgments</a>
         </ul>
 
