--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,7 @@
         <ul id=menu>
           <li><a href="#dick2009">Dick2009</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
+          <li><a href="#brooks2014">Brooks2014</a>
           <li><a href="#acknowledgments">Acknowledgments</a>
         </ul>
 
@@ -82,8 +83,18 @@
         </ul>
         </section>
 
-        
-
+        <section id="brooks2014">
+        <h3>
+        <a name="brooks2014" class="anchor" href="#brooks2014"><span class="octicon octicon-link"></span></a>Brooks 2014</h3>
+        <img src="gallery/NICU-Micro_contigs.ge_1000nt.png" alt="img:brooks2014">
+        <h4>Information</h4>
+        <ul>
+            <li><a href="http://www.microbiomejournal.com/content/2/1/1">Original publication</a></li>
+            <li><a href="http://ggkbase.berkeley.edu/NICU-Micro/download?type=contigs">Sequences source</a></li>
+            <li>sequences >= 1,000 nt: 1,011
+            <li><a href="gallery/NICU-Micro_contigs.ge_1000nt.coords">2D embedding</a></li>
+        </ul>
+        </section>
 
             <hr>
 
