--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,7 @@
 
         <ul id=menu>
           <li><a href="#dick2009">Dick2009</a>
+          <li><a href="#konstantinidis2009">Konstantinidis2009</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
           <li><a href="#brooks2014">Brooks2014</a>
           <li><a href="#acknowledgments">Acknowledgments</a>
@@ -56,7 +57,7 @@
         <p>Stay tuned for updates!</p>
 
         </section>
-
+        
         <section id="dick2009">
         <h3>
         <a name="dick2009" class="anchor" href="#dick2009"><span class="octicon octicon-link"></span></a>Dick 2009</h3>
@@ -67,6 +68,19 @@
             <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=ACXJ01.1.fsa_nt.gz">Sequences source</a></li>
             <li>sequences >= 1,000 nt: 7,606
             <li><a href="gallery/ACXJ01_ge_1000nt.coords">2D embedding</a></li>
+        </ul>
+        </section>
+
+        <section id="Konstantinidis2009">
+        <h3>
+        <a name="konstantinidis2009" class="anchor" href="#konstantinidis2009"><span class="octicon octicon-link"></span></a>Konstantinidis 2009</h3>
+        <img src="gallery/ABEF01.ge_1500nt.png" alt="img:konstantinidis2009">
+        <h4>Information</h4>
+        <ul>
+            <li><a href="http://aem.asm.org/content/75/16/5345.full">Original publication</a></li>
+            <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=ABEF01.1.fsa_nt.gz">Sequences source</a></li>
+            <li>sequences >= 1,500 nt: 19,639
+            <li><a href="gallery/ABEF01.ge_1500nt.coords">2D embedding</a></li>
         </ul>
         </section>
 
