--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
         </ul>
         </section>
 
-        <section id="Konstantinidis2009">
+        <section id="konstantinidis2009">
         <h3>
         <a name="konstantinidis2009" class="anchor" href="#konstantinidis2009"><span class="octicon octicon-link"></span></a>Konstantinidis 2009</h3>
         <img src="gallery/ABEF01.ge_1500nt.png" alt="img:konstantinidis2009">
