--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,7 @@
         <a name="welcome-to-the-vizbin-page" class="anchor" href="#welcome-to-the-vizbin-page"><span class="octicon octicon-link"></span></a>Welcome to the VizBin gallery page.</h3>
 
         <p>You can find 2D embeddings and the associated screenshots of a collection of published metagenomic datasets here. More datasets may be included in the future</p>
+        <p>Should there be any particular metagenomes that you would like to add/see added, please let me know by opening an <a href="https://github.com/claczny/VizBin/issues/new">issue</a>. Your feedback is greatly appreciated.</p>
         <p>Stay tuned for updates!</p>
 
         </section>
