--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
           <li><a href="#konstantinidis2009">Konstantinidis2009</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
           <li><a href="#brooks2014">Brooks2014</a>
+          <li><a href="#mullerpinel2014">MullerPinel2014</a>
           <li><a href="#acknowledgments">Acknowledgments</a>
         </ul>
 
@@ -116,6 +117,21 @@
             <li><a href="http://ggkbase.berkeley.edu/NICU-Micro/download?type=contigs">Sequences source</a></li>
             <li>sequences >= 1,000 nt: 1,011
             <li><a href="gallery/NICU-Micro_contigs.ge_1000nt.coords">2D embedding</a></li>
+        </ul>
+        </section>
+
+        <hr>
+
+        <section id="mullerpinel2014">
+        <h3>
+        <a name="mullerpinel2014" class="anchor" href="#mullerpinel2014"><span class="octicon octicon-link"></span></a>Muller Pinel 2014</h3>
+        <img src="gallery/LAO.9CGs_concatenated.png" alt="img:mullerpinel2014">
+        <h4>Information</h4>
+        <ul>
+            <li><a href="http://www.nature.com/ncomms/2014/141126/ncomms6603/full/ncomms6603.html">Original publication</a></li>
+            <li><a href="http://www.nature.com/ncomms/2014/141126/ncomms6603/full/ncomms6603.html#accessions">Sequences source</a>N.B. individual composite genome contigs were downloaded from RAST ("Genome directory") and combined into one file.</li>
+            <li>sequences >= 1,000 nt: 11,166
+            <li><a href="gallery/LAO.9CGs_concatenated.coords">2D embedding</a></li>
         </ul>
         </section>
 
