--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,9 @@
         </header>
 
         <ul id=menu>
-          <li><a href="#dick2009">Dick2009</a>
+          <li><a href="index.html">Home</a>
           <hr>
+          <li><a href="#dick2009">Dick2009</a>
           <li><a href="#konstantinidis2009">Konstantinidis2009</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
           <li><a href="#brooks2014">Brooks2014</a>
