--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <ul id=menu>
           <li><a href="#downloads">Downloads</a>
-          <li><a href="#main_content">Main</a>
+          <li><a href="#the-application">The application</a>
           <li><a href="gallery.html">Gallery</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
@@ -58,7 +58,7 @@
 <p>Stay tuned for updates!</p>
 
         <h3>
-<a name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
+<a id="the-application" name="the-application" class="anchor" href="#the-application"><span class="octicon octicon-link"></span></a>The application.</h3>
 <p>Great news! The Software article manuscript <a href="http://www.microbiomejournal.com/content/3/1/1/abstract">VizBin - an application for reference-independent visualization and human-augmented binning of metagenomic data</a> is published in Microbiome!!! Happy reading. As of now, it is the author copy and the final version will follow soon. The "Download app" button always points to the most recent version of VizBin. The version of VizBin that is part of the manuscript can be downloaded <a href="https://github.com/claczny/VizBin/raw/v0.9/VizBin-dist.jar">here</a>.</p>
 
 <p>Below, you can see the screenshot of the visualization window. Each point represents a genomic fragment (here of length >= 1,000nt). The colors are added for visualization purposes only and each color represents an invdividual taxon of origin. The points contained in the red polygon are selected.</p>
