--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 
         <ul id=menu>
           <li><a href="#downloads">Downloads</a>
-          <li><a href="#the-application">The application</a>
           <li><a href="gallery.html">Gallery</a>
+          <hr>
+          <li><a href="#the-application">The application</a>
+          <li><a href="#usage">Usage</a>
+          <li><a href="#the-concept">The concept</a>
           <hr>
           <li><a href="#acknowledgments">Acknowledgments</a>
         </ul>
@@ -65,7 +68,7 @@
 <img src="https://github.com/claczny/VizBin/wiki/Tutorials/pictures/13.png" alt="img:polygonal selection">
 
         <h3>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage.</h3>
+<a id="usage" name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage.</h3>
 <p>VizBin is designed with the user in mind. Hence, we kept the default user-interface simple. No fiddling with parameters. All that is needed is a fasta file containing the sequences of interest. A step-by-step guide on using VizBin - including a description of loading the data, selecting points, and exporting the sequences represented by the selected points - is provided on the <a href="https://github.com/claczny/VizBin/wiki/Tutorial">tutorial page</a> of VizBin's github wiki.</p>
 <p>We suggest to visualize fragments that are at least 1,000nt long. Visualizing shorter fragments is also possible but may lead to blurring of distinct clusters, hence the suggested threshold. Filtering sequences based on their length can be done directly from within VizBin, as we explain in the <a href="">tutorial including filtering</a>. Thus, no prior separate filtering step is required.</p>
 <h4>Example datasets</h4>
@@ -77,7 +80,7 @@
 </ul>
 
           <h3>
-<a name="the-concept" class="anchor" href="#the-concept"><span class="octicon octicon-link"></span></a>The concept.</h3>
+<a id="the-concept" name="the-concept" class="anchor" href="#the-concept"><span class="octicon octicon-link"></span></a>The concept.</h3>
 <p>We explain the concept underlying the intuitive visualization  in detail in the publication <a href="http://www.nature.com/srep/2014/140331/srep04516/full/srep04516.html" ><span>Alignment-free Visualization of Metagenomic Data by Nonlinear Dimension Reduction</span></a>. We also include experiments and results on datasets of varying complexity and size. </p>
 
 <h4>Gist</h4>
