--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,7 @@
             <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=ACXJ01.1.fsa_nt.gz">Sequences source</a></li>
             <li>sequences >= 1,000 nt: 7,606
             <li><a href="gallery/ACXJ01_ge_1000nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 1 minute
         </ul>
         </section>
 
@@ -90,6 +91,7 @@
             <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=ABEF01.1.fsa_nt.gz">Sequences source</a></li>
             <li>sequences >= 1,500 nt: 19,639
             <li><a href="gallery/ABEF01.ge_1500nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 2.5 minutes
         </ul>
         </section>
 
@@ -105,6 +107,7 @@
             <li><a href="http://www.ncbi.nlm.nih.gov/Traces/wgs/?download=APMI01.1.fsa_nt.gz">Sequences source</a></li>
             <li>sequences >= 2,000 nt: 52,367
             <li><a href="gallery/APMI01_gt_2000nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 5 minutes
         </ul>
         </section>
 
@@ -120,6 +123,7 @@
             <li><a href="http://ggkbase.berkeley.edu/NICU-Micro/download?type=contigs">Sequences source</a></li>
             <li>sequences >= 1,000 nt: 1,011
             <li><a href="gallery/NICU-Micro_contigs.ge_1000nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 0.5 minutes
         </ul>
         </section>
 
@@ -135,6 +139,7 @@
             <li><a href="http://www.nature.com/ncomms/2014/141126/ncomms6603/full/ncomms6603.html#accessions">Sequences source</a> N.B. individual composite genome contigs were downloaded from RAST ("Genome directory") and combined into one file.</li>
             <li>sequences >= 1,000 nt: 11,166
             <li><a href="gallery/LAO.9CGs_concatenated.coords">2D embedding</a></li>
+            <li>Runtime: ~ 1 minute
         </ul>
         </section>
 
