--- a/gallery.html
+++ b/gallery.html
@@ -146,6 +146,9 @@
 
         <hr>
 
+        <h3>Notes</h3>
+        <p>Visualizations of more recent assemblies generally have shorter sequences than for older assemblies. Typically, the more recent assemblies result in better separated clusters and thus allow the inclusion of shorter sequences. One reason for the better separation might be that more recent assemblies use longer reads and/or improved assemblers and thus produce better contigs. "Better" means here that the genomic signatures of the contigs are closer to the genomic signature of the originating population-level genome. Hence, less "spurious" signatures are introduced. This, in turn, is expected to lead to better separated clusters.</p>
+
         <section id="acknowledgments">
         <h2>Acknowledgments</h2>
         <p>Many people have collaborated on making this application become a reality: Cedric C. Laczny, Tomasz Sternal, Valentin Plugaru, Piotr Gawron, Arash Atashpendar, Hera Houry Margossian, Sergio Coronado, Laurens van der Maaten, Nikos Vlassis, and Paul Wilmes.</p>
