--- a/gallery.html
+++ b/gallery.html
@@ -147,7 +147,7 @@
         <hr>
 
         <h3>Notes</h3>
-        <p>Visualizations of more recent assemblies generally have shorter sequences than for older assemblies. Typically, the more recent assemblies result in better separated clusters and thus allow the inclusion of shorter sequences. One reason for the better separation might be that more recent assemblies use longer reads and/or improved assemblers and thus produce better contigs. "Better" means here that the genomic signatures of the contigs are closer to the genomic signature of the originating population-level genome. Hence, less "spurious" signatures are introduced. This, in turn, is expected to lead to better separated clusters.</p>
+        <p>Visualizations of more recent assemblies usually have a lower minimum length threshold than for older assemblies The lower the threshold the more genomic content is expected to be recovered. Typically, the more recent assemblies result in better separated clusters and thus allow the inclusion of sequences of a lower minimum length. One reason for the better separation might be that more recent assemblies use longer reads and/or improved assemblers and thus produce better contigs. "Better" means here that the genomic signatures of the contigs are closer to the genomic signature of the originating population-level genome. Hence, less "spurious" signatures are introduced. This, in turn, is expected to lead to better separated clusters.</p>
 
         <hr>
 
