--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
           <hr>
           <li><a href="#dick2009">Dick2009</a>
           <li><a href="#konstantinidis2009">Konstantinidis2009</a>
+          <li><a href="#wrighton2012">Wrighton2012</a>
           <li><a href="#albertsen2013">Albertsen2013</a>
           <li><a href="#brooks2014">Brooks2014</a>
           <li><a href="#mullerpinel2014">MullerPinel2014</a>
@@ -93,6 +94,22 @@
             <li>sequences >= 1,500 nt: 19,639
             <li><a href="gallery/ABEF01.ge_1500nt.coords">2D embedding</a></li>
             <li>Runtime: ~ 2.5 minutes
+        </ul>
+        </section>
+
+        <hr>
+
+        <section id="wrighton2012">
+        <h3>
+        <a name="wrighton2012" class="anchor" href="#wrighton2012"><span class="octicon octicon-link"></span></a>Wrighton 2012</h3>
+        <img src="gallery/AMFJ01_gt_1000nt.png" alt="img:wrighton2012">
+        <h4>Information</h4>
+        <ul>
+            <li><a href="http://www.sciencemag.org/content/337/6102/1661.abstract">Original publication</a></li>
+            <li><a href="http://ggkbase.berkeley.edu/Rifle_ACD/organisms">Sequences source</a></li>
+            <li>sequences >= 1,000 nt: 25,278
+            <li><a href="gallery/AMFJ01_gt_1000nt.coords">2D embedding</a></li>
+            <li>Runtime: ~ 2 minutes
         </ul>
         </section>
 
